# simple_IPM

./: CMakeLists.txt  README.md
include/ipm_based_on_vp/: imp.h  utils.h
src/: ipm.cpp
test/: test_ipm.cpp
